force-app/main/default/objects/Retail_Employee__c/Retail_Employee__c.object-meta.xml
<CustomObject>
    <label>Retail Employee</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Retail Employees</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>