force-app/main/default/objects/Retail_Employee__c/fields/Add_states__c.field-meta.xml
<CustomField>
    <fullName>Add_states__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Add states</label>
    <referenceTo>Retail_State__c</referenceTo>
    <relationshipLabel>Retail Employees</relationshipLabel>
    <relationshipName>Retail_Employees</relationshipName>
    <type>Lookup</type>
</CustomField>