force-app/main/default/objects/Retail_Employee__c/fields/Add_Taluka__c.field-meta.xml
<CustomField>
    <fullName>Add_Taluka__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Add Taluka</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Retail_Taluka__c.Add_District__c</field>
            <operation>equals</operation>
            <valueField>$Source.Add_Districts__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Retail_Taluka__c</referenceTo>
    <relationshipLabel>Retail Employees</relationshipLabel>
    <relationshipName>Retail_Employees</relationshipName>
    <type>Lookup</type>
</CustomField>