force-app/main/default/objects/Retail_Employee__c/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Department</label>
    <referenceTo>Retail_Department__c</referenceTo>
    <relationshipLabel>Retail Employees</relationshipLabel>
    <relationshipName>Retail_Employees</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>