force-app/main/default/objects/Retail_Employee__c/fields/Designation__c.field-meta.xml
<CustomField>
    <fullName>Designation__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Designation</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1</booleanFilter>
        <filterItems>
            <field>Retail_Designation__c.Department__c</field>
            <operation>equals</operation>
            <valueField>$Source.Department__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Retail_Designation__c</referenceTo>
    <relationshipLabel>Retail Employees</relationshipLabel>
    <relationshipName>Retail_Employees</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>