force-app/main/default/objects/Retail_Employee__c/fields/Employee_status_checkbox__c.field-meta.xml
<CustomField>
    <fullName>Employee_status_checkbox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Employee status checkbox</label>
    <type>Checkbox</type>
</CustomField>