force-app/main/default/objects/Retail_Employee__c/fields/Manager__c.field-meta.xml
<CustomField>
    <fullName>Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Manager</label>
    <referenceTo>Retail_Employee__c</referenceTo>
    <relationshipLabel>Retail Employees</relationshipLabel>
    <relationshipName>Retail_Employees</relationshipName>
    <type>Lookup</type>
</CustomField>