force-app/main/default/objects/Retail_Employee__c/recordTypes/Retail_Employee.recordType-meta.xml
<RecordType>
    <fullName>Retail_Employee</fullName>
    <active>true</active>
    <label>Retail Employee</label>
</RecordType>