force-app/main/default/objects/Retail_Employee__c/validationRules/Phone_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Phone_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(OR(ISBLANK(Phone_Number__c), REGEX(Phone_Number__c, &quot;^[0-9]{10}$&quot;)))</errorConditionFormula>
    <errorDisplayField>Phone_Number__c</errorDisplayField>
    <errorMessage>Enter a valid phone number</errorMessage>
</ValidationRule>