force-app/main/default/objects/Retail_Employee__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Gender__c</columns>
    <columns>Date_Of_Birth__c</columns>
    <columns>Email__c</columns>
    <columns>Phone_Number__c</columns>
    <columns>Department__c</columns>
    <columns>Employee_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>